refactor: few stylistic changes

--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -84,8 +84,8 @@
 }
 
 .background {
-  background-color: black;
-  opacity: 0.5;
+  background-color: gray;
+  /* opacity: 0.5; */
   height: 100%;
   width: 100%;
   position: absolute;
