--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap");
+
+body {
+  margin: 0px;
+  font-family: "Manrope", sans-serif;
+}
+
 .curve {
   svg,
   .background {
