--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -8,7 +8,7 @@
 
 .bar {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 400;
@@ -22,8 +22,7 @@
 .bar a {
   text-decoration: none;
   color: black;
-  position: absolute;
-  left: 0;
+  margin-right: auto;
 }
 
 .el {
@@ -85,7 +84,6 @@
 
 .background {
   background-color: gray;
-  /* opacity: 0.5; */
   height: 100%;
   width: 100%;
   position: absolute;
