feat: implement interior design and communities section

--- a/src/components/filter-bar/index.module.css
+++ b/src/components/filter-bar/index.module.css
@@ -124,6 +124,12 @@
     width: 100%;
   }
 
+  .priceRange {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
   .separator {
     display: none;
   }
