--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -203,6 +203,17 @@ body {
   margin-bottom: 30px;
 }
 
+.scrollable-category-bar {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.scrollable-category-bar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 @media (min-width: 640px) {
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
